--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,13 +1,5 @@
 {
     "printWidth": 120,
     "tabWidth": 4,
-    "singleQuote": true,
-    "overrides": [
-        {
-            "files": "*.{yaml,yml}",
-            "options": {
-                "tabWidth": 2
-            }
-        }
-    ]
+    "singleQuote": true
 }
